# oxi

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RESEARCH_LOG.md  SECURITY.md  TASK.md  rebuild_all.sh
crates/oxicells-core/: Cargo.toml
crates/oxicells-core/src/: editor.rs  formula.rs  ir.rs  lib.rs  parser.rs
crates/oxicells-core/tests/: editor_roundtrip_integration.rs  formula_integration.rs  public_api_integration.rs
crates/oxidocs/: Cargo.toml  README.md
crates/oxidocs-cli/: Cargo.toml
crates/oxidocs-cli/src/: main.rs
crates/oxidocs-common/: Cargo.toml
crates/oxidocs-common/src/: lib.rs  security.rs
crates/oxidocs-common/tests/: archive_integration.rs  relationships_integration.rs  security_integration.rs  xml_utils_integration.rs
crates/oxidocs-wasm/: .gitignore  Cargo.toml  README-npm.md  build-npm.sh
crates/oxidocs-wasm/src/: lib.rs
crates/oxidocs/src/: lib.rs
crates/oxihanko/: Cargo.toml
crates/oxihanko/src/: lib.rs  signer.rs  stamp.rs
crates/oxihanko/tests/: public_api_integration.rs
crates/oxislides-core/: Cargo.toml
crates/oxislides-core/src/: editor.rs  ir.rs  lib.rs  parser.rs
crates/oxislides-core/tests/: public_api_integration.rs  shape_properties_integration.rs
tools/golden-test/: Cargo.toml  collect_bulk.py  collect_direct.py  collect_documents.py  collect_estat.py  collect_estat2.py  collect_extra.py  collect_final.py  collect_more.py  collect_pptx.py  collect_verified.py  collect_wide.py  compare_all.py  compare_layout.py  compare_libreoffice.py  compare_lo_safe.py  compare_oxi_vs_lo.py  compare_word.py  diff_analysis.py  fast_check.sh  fast_compare.py  generate_more.py  generate_test_files.py  lo_vs_word.py  pixel_compare.py  position_compare.py  quick_compare.py  quick_ssim.py  render_and_compare.py  render_word.py  word_layout_extract.py
tools/golden-test/repros/: .gitignore  LICENSE.md  s416_rightalign_trigger.docx  s420_kinsoku_rebalance.docx  s420_kinsoku_v2.docx
tools/golden-test/repros/0e7af_class_b/: CB_V200_para207_only.docx  CB_V201_paras_205_to_209.docx  CB_V202_paras_200_to_215.docx
tools/golden-test/repros/a1d6_row21_isolate/: V800a_overflow_valign_trH_atLeast.docx  V800b_overflow_valign_top.docx  V800c_overflow_no_trH.docx  V800d_overflow_trH_exact.docx  V800e_single_para_trH.docx  V800f_overflow_no_sb.docx  V800h_2cell_a1d6_exact.docx  V800i_1para_no_trH.docx  V800j_row21_no_body.docx  V800k_only_row21_section_table.docx  V800l_cantSplit_vMerge.docx  V800m_with_tcBorders_explicit.docx  V800n_with_shd_clear.docx  V800o_both_tcBorders_shd.docx  V800p_with_tblInd.docx  V800q_all_attrs.docx  V800r_l_with_k_settings.docx  V800s_l_with_k_styles.docx  V800t_l_with_k_settings_styles.docx  V800u_k_no_drawingGrid.docx  V800v_k_no_defaultTabStop.docx  V800w_k_minimal_settings.docx  V800x_k_minimal_styles.docx  V800y_l_with_a1d6_subsequent.docx  V800y_n00.docx  V800y_n01.docx  V800y_n02.docx  V800y_n04.docx  V800y_n08.docx  V800y_n12.docx  V800y_n13.docx  V800y_n14.docx  V800y_n15.docx  V800y_n16.docx  V800y_n17.docx  V800y_n18.docx
tools/golden-test/repros/a1d6_table_minimize/: all_rows.docx  rows_0_to_12_skip_13_20.docx  rows_0_to_21.docx  rows_10_to_21.docx  rows_13_to_21.docx  rows_19_to_21.docx  rows_20_21.docx  rows_21_only.docx
tools/golden-test/repros/a1d6_top_down_min/: TM_a_table_only.docx  TM_b_row_only.docx  TM_baseline.docx  TM_c_cell_only.docx  TM_charspace0.docx  TM_d_para_only.docx  TM_docgrid_default.docx  TM_linePitch240.docx  TM_no_charspace.docx  TM_no_docgrid.docx  TM_nothing_removed.docx  TM_p0.docx  TM_p1.docx  TM_p10.docx  TM_p2.docx  TM_p5.docx  TM_p8.docx  TM_pair_4_0.docx  TM_pair_4_1.docx  TM_pair_4_2.docx  TM_pair_4_3.docx  TM_pair_4_5.docx  TM_paras_target_table_only.docx  TM_remove_0.docx  TM_remove_0_1.docx  TM_remove_0_1_2.docx  TM_remove_0_1_2_3.docx  TM_remove_0_1_2_3_5.docx  TM_remove_0_1_5.docx  TM_remove_1.docx  TM_remove_2.docx  TM_remove_2_3.docx  TM_remove_3.docx  TM_remove_4.docx  TM_remove_5.docx  TM_t_1.docx  TM_t_2.docx  TM_t_3.docx  TM_t_4.docx  TM_t_5.docx  (+1 more)
tools/golden-test/repros/a47e6_row6/: R01_full.docx  R02_label_plus_nested.docx  R03_trailing_only.docx  R04_nested_only.docx  R05_label_plus_trailing.docx  R06_nested_plus_trailing.docx
tools/golden-test/repros/atleast_cellY/: atleast_20.docx  atleast_30.docx  atleast_40.docx  atleast_50.docx  atleast_none.docx
tools/golden-test/repros/autospace_digit/: as_digit.docx
tools/golden-test/repros/b837indent/: b837indent.docx
tools/golden-test/repros/border_box/: bb_repro.docx
tools/golden-test/repros/breakflip/: bf_close_kak.docx  bf_close_paren.docx  bf_comma.docx  bf_kanji.docx  bf_open_kak.docx  bf_period.docx
tools/golden-test/repros/breakflip_jc/: bf_close_kak_both.docx  bf_close_kak_center.docx  bf_close_kak_left.docx  bf_close_kak_right.docx  bf_close_paren_both.docx  bf_close_paren_center.docx  bf_close_paren_left.docx  bf_close_paren_right.docx  bf_comma_both.docx  bf_comma_center.docx  bf_comma_left.docx  bf_comma_right.docx  bf_kanji_both.docx  bf_kanji_center.docx  bf_kanji_left.docx  bf_kanji_right.docx  bf_open_kak_both.docx  bf_open_kak_center.docx  bf_open_kak_left.docx  bf_open_kak_right.docx  bf_period_both.docx  bf_period_center.docx  bf_period_left.docx  bf_period_right.docx  rd_d10_both.docx  rd_d10_left.docx  rd_d3_both.docx  rd_d3_left.docx  rd_d6_both.docx  rd_d6_left.docx  rd_mix_both.docx  rd_mix_left.docx
tools/golden-test/repros/cell_empty_section/: V500a_cell_section_only.docx  V500b_cell_1empty_section.docx  V500c_cell_5empty_section.docx  V500d_cell_5empty_section_valign_center.docx  V500e_cell_5empty_section_trheight200.docx  V500f_cell_5empty_section_trheight3000.docx  V500g_cell_5empty_section_no_sb.docx  V500h_cell_5bare_empty_section.docx
tools/golden-test/repros/cell_wrap_hanging/: V300a_no_hanging.docx  V300b_a1d6_exact.docx  (+11 more)
tools/golden-test/src/: main.rs
tools/oxi-dwrite-renderer/: Cargo.toml
tools/oxi-dwrite-renderer/src/: main.rs
tools/oxi-gdi-renderer/: Cargo.toml
tools/oxi-gdi-renderer/src/: main.rs
(+4759 files in other folders)
