[workspace]
members = ["crates/oxidocs", "crates/oxidocs-common", "crates/oxicells-core", "crates/oxidocs-core", "crates/oxihanko", "crates/oxipdf-core", "crates/oxidocs-wasm", "crates/oxislides-core", "crates/oxidocs-cli"]
exclude = ["tools/font-metrics-gen", "tools/golden-test", "crates/oxi-desktop", "tools/oxi-gdi-renderer", "tools/oxi-dwrite-renderer", "tools/emf-to-png"]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
