[package]
name = "oxidocs-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "oxidocs"
path = "src/main.rs"

[dependencies]
oxidocs-core = { path = "../oxidocs-core" }
oxipdf-core = { path = "../oxipdf-core" }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
