[package]
name = "oxislides-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core presentation processing engine for OxiSlides (.pptx)"

[dependencies]
oxi-common = { path = "../oxi-common" }
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
