[package]
name = "golden-test"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidocs-core = { path = "../../crates/oxidocs-core" }
oxicells-core = { path = "../../crates/oxicells-core" }
oxislides-core = { path = "../../crates/oxislides-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
