[package]
name = "oxi-dwrite-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidocs-core = { path = "../../crates/oxidocs-core" }
serde_json = "1"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Imaging_D2D",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "oxi-dwrite-renderer"
path = "src/main.rs"
