[package]
name = "oxi-gdi-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidocs-core = { path = "../../crates/oxidocs-core" }
serde_json = "1"
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
